CHATS_SIT/force-app/main/default/objects/T_NON_ADJMT_DETAIL__c.object
<CustomObject>
    <description>Detail information for non sub payment adjustments</description>
    <fields>
        <fullName>AMT_DETAIL_ADJMT__c</fullName>
        <description>Adjustment Amount</description>
        <label>Adjustment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS_DETAIL_ADJMT__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00719</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_ADJMT__c</fullName>
        <description>Adjustment</description>
        <label>Adjustment</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Non Adjustment Details</relationshipLabel>
        <relationshipName>Adjustment6</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IDN_AUTH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Authorization</description>
        <label>Authorization</label>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Authorization</relationshipLabel>
        <relationshipName>Authorization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_DETAIL_ADJMT_NON__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PROG_FNDG__c</fullName>
        <description>Funding Program</description>
        <label>Funding Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00728</valueSetName>
        </valueSet>
    </fields>
    <label>Non Adjustment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Non Adjustment Detail ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Adjustment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>